<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bachao</string>
    <string name="menu_settings">Settings</string>
    <string name="alert">Help</string>
    <string name="friends_contacts">Contacts</string>
    <string name="frcontact">Enter Number</string>
    <string name="addcontact">Add Contacts</string>
    <string name="updatelocstring">Update my Location Every</string>
    <string name="regex_phone">^\\(?\\d{3}[\\)?|-]\\d{3}[- ]\\d{4}((\\s=?)(ext\\.|x)\\d{1,4})?$</string>
    <string name="onehour">1 Hour</string>
    <string name="sixhours">6 Hours</string>
    <string name="daily">Daily</string>
    <string name="onstartbach">Only when bachchao is started</string>
    <string name="videostreaming">Video Streaming</string>
    <string name="save">Help! I am in an emergency at</string>
    <string name="cancel">Cancel</string>
    <string name="emailid">Email Id</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="done">Done</string>
    <string name="Contacts">CONTACTS</string>
    <string name="locationupdatetext">LOCATION UPDATE</string>
    <string name="Custommsgtext">CUSTOM MESSAGE</string>
    <string name="never">Never</string>
    <string name="locationhint">I am currently at</string>
    <string name ="custommsghint">I am in need of help</string>
    <string name="userhint">-your name</string>
    <string name="settings">SETTINGS</string>
    <string name="space"> </string>
    <string name="unknowncontact">Unknown Contact</string>
    <string name="findinglocation">Finding Location</string>
    <string name="search">Search</string>
	<string name="help">Help!I am in an emergency at</string>
	<string name="addcontact">ADD CONTACT</string>
	<string name="replacecontact">REPLACE CONTACT</string>
	<string name="assignedcontact">ASSIGNED CONTACT</string>
	<string name="contactlist">CONTACT LIST</string>
	<string name="cannotaddcontact">Cannot add a contact with no Phone Number and Email Id</string>
	<string name="cannotaddinvalid">Cannot add contact with invalid Phone Number</string>
	<string name="contactallreadyinlist">The Contact is already on your list</string>
	<string name="smsfailed"> SMS failed !!! </string>
	<string name="cameranotavailable">Camera not available! </string>
	<string name="locationsetting">LOCATION TYPE</string>
	<string name="approxaddress">Send Approximate Address</string>
	<string name="accuratelocation">Send Accurate  Location Value</string>
	<string name="internetconnectset">This needs internet connectivity</string>
	<string name ="dursmswarnpre">A sms will be sent every</string>
	<string name="dursmswarnpost">to your contacts</string>
	<string name="contactsloading">Please wait contacts are loading..</string>
	<string name="nomatchingcontacts">no matching contacts</string>
	<string name="delete">Delete</string>
	<string name="phoneno">Enter Phone Number</string>

</resources>
